# s3uploader

./: .coveragerc  .gitignore  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
s3uploader/: __init__.py  api.py  constants.py  exceptions.py  s3.py
s3uploader/cmds/: api.py  service.py
s3uploader/tests/unit/s3uploader/: test_api.py  test_s3.py
