[metadata]
name = s3uploader
summary = An S3 asset uploader
description-file =
    README.rst
author = Armando Migliaccio
author-email = armamig@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    s3uploader

[entry_points]
console_scripts =
    service = s3uploader.cmds.service:main
